SAM-939: Implement survey question type to support rating items against the same set of answers
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@95934 66ffb92e-73f9-0310-93c1-f5514f145a0a